--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,9 @@
-<p>projects works!</p>
+<div class="heading-container">
+    <h1 class="content-heading">My Projects</h1>
+</div>
+<div class="content-container">
+    <div class="grid-container">
+        <app-project *ngFor="let project of projects" [project]="project"></app-project>
+    </div>
+    <button class="nav-button" [routerLink]="['/experience']">Experience</button>
+</div>
