--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,79 +1,156 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Source+Code+Pro:ital@1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Source+Code+Pro:ital@1&display=swap");
 
-.container{
-    padding-left: 2rem;
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  background-color: #302e2e;
 }
 
-.profile-container{
-    display: flex;
-    flex-wrap: wrap;
-    min-height: 100vh;
+.content-padding {
+  padding: 4em 3em 4em 3em;
+}
+
+.profile-image-container {
+  margin-bottom: 4em;
+  display: flex;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+}
+
+.badge-art {
+  height: 25rem;
+  width: 25rem;
+  padding: 1rem;
+  border-radius: 12.5rem 12.5rem 12.5rem 12.5rem;
+  background-color: #534a4a;
+}
+
+.profile-image {
+  height: 25rem;
+  width: 25rem;
+}
+
+.name {
+  color: white;
+  font-family: "Raleway", sans-serif;
+  font-size: 10.3rem;
+  line-height: 1.5;
+  display: block;
+  text-shadow: 4px 4px #ed754f, 5px 5px yellow;
+}
+
+.tagline {
+  color: rgb(209, 199, 108);
+  font-family: "Source Code Pro", monospace;
+  font-size: 1.6rem;
+
+}
+
+.name:hover {
+  text-shadow: 5px 5px #ed754f, 6px 6px yellow;
+}
+
+.profile-icon {
+  font-size: 1rem;
+  color: white;
+  margin-top: 1rem;
+  margin-right: 1rem;
+}
+
+.profile-icon a {
+  text-decoration: none;
+  color: white;
+  font-size: 2.5rem;
+}
+
+
+.name-responsive{
+  display: none;
+}
+
+
+@media screen and (max-width: 1400px) {
+  .name {
+    font-size: 10.3rem;
+    line-height: 1.5;
+  }
+
+
+}
+
+@media screen and (max-width: 1100px) {
+  .name {
+    font-size: 8.3rem;
+    line-height: 1.5;
+  }
+  
+}
+
+@media screen and (max-width: 900px) {
+  .name {
+    font-size: 6.3rem;
+    line-height: 1.5;
+  }
+
+  .tagline {
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .name {
+    font-size: 5.6rem;
+    line-height: 1.5;
+  }
+
+  .tagline {
+  }
+
+
+}
+
+@media screen and (max-width: 600px) {
+  .name {
+    display: none;
+    font-size: 7.3rem;
+    line-height: 7rem;
+  }
+
+  .name-responsive{
+    display: block;
+  }
+
+  .tagline {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .name {
+    font-size: 6.5rem;
+    line-height: 7rem;
+  }
+
+  .tagline {
+  }
+
+  
+
+  .center-responsive{
+    justify-content: center;
     align-items: center;
+  }
 }
 
-.profile-image-container{
-    flex:1;
-}
-
-.info-container{
-    display: flex;
-    flex-direction: column;
-    flex:2;
-    padding-bottom: 2rem;
-}
-
-.badge-art{
-    height: 20rem;
-    padding: 1rem;
-    border-radius: 10rem 0rem 0rem 10rem;
-    background-color: #534A4A;
-}
-
-.profile-image{
-    height: 20rem;
-    width: 20rem;
-}
-
-.name{
-    color: white;
-    font-family: 'Raleway', sans-serif;
-    font-size: 7rem;
-}
-
-.tagline{
-    color:pink;
-    font-family: 'Source Code Pro', monospace;
-    padding-top: 1rem;
-}
-
-.social-profiles-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.rounded-box{
-    border-radius: 3rem;
-    background-color: #595454;
-    padding: 1.5rem;
-    height: 6rem;
-    width: 18rem;
-    margin: 2rem;
-}
-
-.rounded-box-title{
-    color: white;
-    padding-bottom: 1rem;
-}
-
-.profile-icon{
-    font-size: 2rem;
-    color: white;
-    margin-top: 1rem;
-    margin-right: 1rem;
-}
-
-.profile-icon a{
-    text-decoration: none;
-    color: white;
+@media screen and (max-width: 400px) {
+  .name {
+    font-size: 6rem;
+    line-height: 7rem;
+  }
+  .tagline {
+  }
 }
