--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,21 +1,63 @@
-<div class="container">
-    <section class="profile-container">
-        <div class="info-container">
-            <h1 class="name">{{name}}</h1>
-            <p class="tagline">{{tagline}}</p>
-            <div class="social-profile-container">
-                <mat-icon class="profile-icon"><a href="#">email</a></mat-icon>
-                <mat-icon class="profile-icon"><a href="https://facebook.com">facebook</a></mat-icon>
-            </div>
+<div class="content-container">
+  <section class="profile-container content-padding center-responsive">
+    <div class="header">
+      <div class="profile-image-container center-responsive">
+        <div class="badge-art">
+          <img
+          src="../../assets/mypic1600.webp"
+          srcset="../../assets/mypic375.webp 400w, ../../assets/mypic768.webp 768w, ../../assets/mypic1600.webp 1600w"
+          sizes="(max-width:375px) 375px, (max-width:768px) 768px, (max-width:1440px) 1600px, 1600px" 
+          alt="profile image"
+          class="profile-image"
+          />
         </div>
-        <div class="profile-image-container">
-            <div class="badge-art">
-                <img src="../../assets/circle-cropped.png" alt="profile image" class="profile-image">
-            </div>
+      </div>
+      <div class="info-container">
+        <div class="name-container">
+          <h1 class="name">{{ name }} {{ surname }}</h1>
+          <h1 class="name name-responsive">{{ name }}</h1>
         </div>
-    </section>
+        <div class="tagline-container">
+          <p class="tagline">{{ tagline }}</p>
+        </div>
+        
+        <div class="horizontal-container center-responsive">
+          <mat-icon class="profile-icon"><a href="#">email</a></mat-icon>
+          <mat-icon class="profile-icon"
+          ><a href="https://facebook.com">facebook</a></mat-icon
+          >
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <section>
-        <h2>What do I do?</h2>
-    </section>
+  <section class="content-padding">
+    <h1 class="content-heading">What do I do?</h1>
+    <div class="two-columns">
+      <div class="col-1"></div>
+      <div class="col-1">
+        <p class="content">
+          I like developing new projects and exploring new technologies. I have
+          a passion for good UI experience. SO far, have have primarily focused
+          on Android development but recently I've been more active exploring
+          web technologies and frameworks.
+        </p>
+        <br />
+        <p class="content">
+          I am fluent in various object oriented programming languages like
+          Java, Python, Kotlin and am exploring more into them. Apart from that
+          I've been exploring competitive programming and solving more and more
+          problems with C/C++.
+        </p>
+        <br>
+        <p class="content">
+          I have released an Android Application on Google Play Store and have
+          developed serveral applications as learning challenges in Java, Python
+          and Kotlin.
+        </p>
+        <br /><br />
+      </div>
+    </div>
+    <button class="nav-button" [routerLink]="['/projects']">Projects</button>
+  </section>
 </div>
