--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-navigation></app-navigation>
-  <div class="content-container">
+  <div class="app-container">
     <router-outlet></router-outlet>
   </div>
 </div>
