--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,34 +1,77 @@
-.nav-container{
-    display: flex;
+.side-nav-container {
+  display: flex;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 13rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #292727;
+}
+
+.nav-menu {
+  width: 100%;
+  padding: 30px;
+  margin-bottom: 4rem;
+}
+
+.nav-menu-item {
+  list-style: none;
+  display: block;
+  text-align: center;
+  color: #ed754f;
+  padding: 6px 0px 6px 0px;
+  font-size: 1.6rem;
+  opacity: 1;
+}
+
+.active {
+  background-color: #505050;
+}
+.nav-menu-item:hover {
+  background-color: #707070;
+}
+
+.hamburger-menu {
+  position: fixed;
+  right: 4em;
+  top: 4em;
+  filter: invert();
+  display: none;
+  z-index: 10;
+}
+
+@media screen and (max-width: 1300px) {
+  .nav-container {
+    display: block;
     position: fixed;
-    left: 0;
-    top:0;
-    width: 13rem;
+    top: 0;
+    width: 100vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #302E2E;
-}
+    height: max-content;
+    padding-top: 6em;
+    background-color: #292727;
+    opacity: 0.9;
+  }
 
-.nav-menu{
-    width: 100%;
-    padding: 30px;
-}
+  .nav-menu-item{
+      font-size: 4em;
+      line-height: 1.5;
+  }
 
-.nav-menu-item{
-    
-    list-style: none;
+  .nav-menu{
+    padding: 0px;
+  }
+
+  .hamburger-menu {
     display: block;
-    text-align: center;
-    color: #ED754F;
-    padding: 6px 0px 6px 0px;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-.active{
-    background-color: #505050;
-}
-.nav-menu-item:hover{
-    background-color: #707070;
+  }
+  
+  .side-nav-container{
+    display: none;
+  }
 }
