minor ui changes

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,5 +5,5 @@
     <div class="grid-container">
         <app-project *ngFor="let project of projects" [project]="project"></app-project>
     </div>
-    <button class="nav-button" [routerLink]="['/experience']">Experience</button>
+    <button class="nav-button" [routerLink]="['/experiences']">Experience</button>
 </div>
