--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -15,18 +15,21 @@
     color: white;
     padding-bottom: 1rem;
     font-size: 3rem;
+    font-weight: 550;
 }
 
 .rounded-box-content{
     color: white;
-    font-size: 2rem;
+    font-size: 1.7rem;
     line-height: 1.5;
-    padding-bottom: 1rem;
 }
 
 .rounded-box-heading{
+    font-weight: 450;
     color: white;
     font-size: 2.4em;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 
