font sizes adapted to mobile devices and paddings adjusted

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,9 +22,9 @@
         </div>
         
         <div class="horizontal-container center-responsive">
-          <mat-icon class="profile-icon"><a href="#">email</a></mat-icon>
+          <mat-icon class="profile-icon"><a href="mailto:abhishekjagushte@gmail.com">email</a></mat-icon>
           <mat-icon class="profile-icon"
-          ><a href="https://facebook.com">facebook</a></mat-icon
+          ><a href="https://www.facebook.com/abhishek.jagushte.9">facebook</a></mat-icon
           >
         </div>
       </div>
