--- a/src/app/experiences/experience/experience.component.css
+++ b/src/app/experiences/experience/experience.component.css
@@ -1,5 +1,5 @@
 .experience-container{
-    padding: 0rem 2rem;
+    padding-left: 2rem;
     border-left: 5px solid orangered;
     margin-bottom: 8rem;
 }
