added skills section initial

--- a/src/app/skills-and-achievements/skills-and-achievements.component.html
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.html
@@ -1,1 +1,75 @@
-<p>skills-and-achievements works!</p>
+<div class="heading-container">
+    <h1 class="content-heading">Skills & Achievements</h1>
+</div>
+<div class="content-container">
+    <h2 class="subheading2">Technologies</h2>
+
+    <div class="chart">
+        <hr class="chart-line" style="bottom: 0%;">
+        <hr class="chart-line" style="bottom: 25%;">
+        <hr class="chart-line" style="bottom: 50%;">
+        <hr class="chart-line" style="bottom: 75%;">
+        <label  class="chart-label" style="bottom: 25%;">Beginner</label>
+        <label  class="chart-label" style="bottom: 50%;">Intermediate</label>
+        <label  class="chart-label" style="bottom: 75%;">Expert</label>
+        
+        <div class="skills">
+            <div class="skill">
+                <label class="chart-colun-name">Android Development</label>
+                <div class="skill-bar" style="height: 65%; background-color: rgb(155, 192, 155);"></div>
+            </div>
+        
+        <div class="skill">
+            <label class="chart-colun-name">NodeJS</label>
+            <div class="skill-bar" style="height: 51%; background-color: rgb(118, 187, 118);"></div>
+        </div>        
+        
+        <div class="skill">
+            <label class="chart-colun-name">Angular</label>
+            <div class="skill-bar" style="height: 60%; background-color: rgb(212, 80, 80);"></div>
+        </div>        
+        
+        <div class="skill">
+            <label class="chart-colun-name">Firebase</label>
+            <div class="skill-bar" style="height: 63%; background-color: orange;"></div>
+        </div>
+    </div>
+        
+    </div>    
+    
+    <h2 class="subheading2">Languages</h2>
+
+    <div class="chart">
+        <hr class="chart-line" style="bottom: 0%;">
+        <hr class="chart-line" style="bottom: 25%;">
+        <hr class="chart-line" style="bottom: 50%;">
+        <hr class="chart-line" style="bottom: 75%;">
+        <label  class="chart-label" style="bottom: 25%;">Beginner</label>
+        <label  class="chart-label" style="bottom: 50%;">Intermediate</label>
+        <label  class="chart-label" style="bottom: 75%;">Expert</label>
+        
+        <div class="skills">
+            <div class="skill">
+                <label class="chart-colun-name">Kotlin</label>
+                <div class="skill-bar" style="height: 68%; background-color: purple;"></div>
+            </div>
+        
+        <div class="skill">
+            <label class="chart-colun-name">Java</label>
+            <div class="skill-bar" style="height: 64%; background-color: rgb(212, 102, 102);"></div>
+        </div>        
+        
+        <div class="skill">
+            <label class="chart-colun-name">Python</label>
+            <div class="skill-bar" style="height: 62%; background-color: rgb(54, 121, 197);"></div>
+        </div>        
+        
+        <div class="skill">
+            <label class="chart-colun-name">C/C++</label>
+            <div class="skill-bar" style="height: 52%; background-color: rgb(231, 100, 214);"></div>
+        </div>
+    </div>
+        
+    </div>
+
+</div>
