--- a/src/app/experiences/experiences.component.html
+++ b/src/app/experiences/experiences.component.html
@@ -3,4 +3,5 @@
 </div>
 <div class ="content-container">
     <app-experience *ngFor="let exp of experiences" [experience]="exp"></app-experience>
+    <button class="nav-button" [routerLink]="['/skills']">Skills</button>
 </div>
