--- a/src/app/skills-and-achievements/skills-and-achievements.component.html
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.html
@@ -1,75 +1,114 @@
 <div class="heading-container">
-    <h1 class="content-heading">Skills & Achievements</h1>
+  <h1 class="content-heading">Skills...</h1>
 </div>
 <div class="content-container">
-    <h2 class="subheading2">Technologies</h2>
-
-    <div class="chart">
-        <hr class="chart-line" style="bottom: 0%;">
-        <hr class="chart-line" style="bottom: 25%;">
-        <hr class="chart-line" style="bottom: 50%;">
-        <hr class="chart-line" style="bottom: 75%;">
-        <label  class="chart-label" style="bottom: 25%;">Beginner</label>
-        <label  class="chart-label" style="bottom: 50%;">Intermediate</label>
-        <label  class="chart-label" style="bottom: 75%;">Expert</label>
-        
-        <div class="skills">
-            <div class="skill">
-                <label class="chart-colun-name">Android Development</label>
-                <div class="skill-bar" style="height: 65%; background-color: rgb(155, 192, 155);"></div>
-            </div>
-        
-        <div class="skill">
-            <label class="chart-colun-name">NodeJS</label>
-            <div class="skill-bar" style="height: 51%; background-color: rgb(118, 187, 118);"></div>
-        </div>        
-        
-        <div class="skill">
-            <label class="chart-colun-name">Angular</label>
-            <div class="skill-bar" style="height: 60%; background-color: rgb(212, 80, 80);"></div>
-        </div>        
-        
-        <div class="skill">
-            <label class="chart-colun-name">Firebase</label>
-            <div class="skill-bar" style="height: 63%; background-color: orange;"></div>
-        </div>
-    </div>
-        
-    </div>    
+  <h2 class="subheading2">Technologies</h2>
+  
+  <div class="chart">
+    <hr class="chart-line" style="bottom: 0%" />
+    <hr class="chart-line" style="bottom: 25%" />
+    <hr class="chart-line" style="bottom: 50%" />
+    <hr class="chart-line" style="bottom: 75%" />
+    <label class="chart-label" style="bottom: 25%">Beg.</label>
+    <label class="chart-label" style="bottom: 50%">Int.</label>
+    <label class="chart-label" style="bottom: 75%">Exp.</label>
     
-    <h2 class="subheading2">Languages</h2>
-
-    <div class="chart">
-        <hr class="chart-line" style="bottom: 0%;">
-        <hr class="chart-line" style="bottom: 25%;">
-        <hr class="chart-line" style="bottom: 50%;">
-        <hr class="chart-line" style="bottom: 75%;">
-        <label  class="chart-label" style="bottom: 25%;">Beginner</label>
-        <label  class="chart-label" style="bottom: 50%;">Intermediate</label>
-        <label  class="chart-label" style="bottom: 75%;">Expert</label>
-        
-        <div class="skills">
-            <div class="skill">
-                <label class="chart-colun-name">Kotlin</label>
-                <div class="skill-bar" style="height: 68%; background-color: purple;"></div>
-            </div>
-        
-        <div class="skill">
-            <label class="chart-colun-name">Java</label>
-            <div class="skill-bar" style="height: 64%; background-color: rgb(212, 102, 102);"></div>
-        </div>        
-        
-        <div class="skill">
-            <label class="chart-colun-name">Python</label>
-            <div class="skill-bar" style="height: 62%; background-color: rgb(54, 121, 197);"></div>
-        </div>        
-        
-        <div class="skill">
-            <label class="chart-colun-name">C/C++</label>
-            <div class="skill-bar" style="height: 52%; background-color: rgb(231, 100, 214);"></div>
+    <div class="skills">
+      <div class="skill">
+        <img class="bar-col-icon" src="../../assets/android.webp" alt="">
+        <label class="chart-colun-name">Android</label>
+        <div
+        class="skill-bar"
+        style="height: 65%; background-color: rgb(155, 192, 155)"
+        ></div>
+      </div>
+      
+      <div class="skill">
+        <img class="bar-col-icon" src="../../assets/nodejs.webp" alt="">
+        <label class="chart-colun-name">NodeJS</label>
+        <div
+          class="skill-bar"
+          style="height: 51%; background-color: rgb(118, 187, 118)"
+          ></div>
         </div>
-    </div>
         
+        <div class="skill">
+        <img class="bar-col-icon" src="../../assets/angular.png" alt="">
+        <label class="chart-colun-name">Angular</label>
+        <div
+        class="skill-bar"
+        style="height: 60%; background-color: rgb(212, 80, 80)"
+        ></div>
+      </div>
+      
+      <div class="skill">
+        <img class="bar-col-icon" src="../../assets/firebase.png" alt="">
+        <label class="chart-colun-name">Firebase</label>
+        <div
+          class="skill-bar"
+          style="height: 63%; background-color: orange"
+        ></div>
+      </div>
     </div>
+  </div>
 
+  <h2 class="subheading2">Languages</h2>
+
+  <div class="chart">
+    <hr class="chart-line" style="bottom: 0%" />
+    <hr class="chart-line" style="bottom: 25%" />
+    <hr class="chart-line" style="bottom: 50%" />
+    <hr class="chart-line" style="bottom: 75%" />
+    <label class="chart-label" style="bottom: 25%">Beg.</label>
+    <label class="chart-label" style="bottom: 50%">Int.</label>
+    <label class="chart-label" style="bottom: 75%">Exp.</label>
+
+    <div class="skills">
+      <div class="skill">
+        <img class="bar-col-icon" src="../../assets/kotlin.webp" alt="">
+        <label class="chart-colun-name">Kotlin/Java</label>
+        <div
+        class="skill-bar"
+        style="height: 68%; background-color: rgb(209, 148, 35)"
+        ></div>
+      </div>
+      
+      <div class="skill">
+        <img class="bar-col-icon" src="../../assets/python.png" alt="">
+        <label class="chart-colun-name">Python</label>
+        <div
+        class="skill-bar"
+        style="height: 62%; background-color: rgb(231, 229, 102)"
+        ></div>
+      </div>
+      
+      <div class="skill">
+        <img class="bar-col-icon" src="../../assets/typescript.webp" alt="">
+        <label class="chart-colun-name">Typescript</label>
+        <div
+        class="skill-bar"
+        style="height: 59%; background-color: rgb(54, 121, 197)"
+        ></div>
+      </div>
+      
+      <div class="skill">
+        <img class="bar-col-icon" src="../../assets/c.webp" alt="">
+        <label class="chart-colun-name">C/C++</label>
+        <div
+          class="skill-bar"
+          style="height: 52%; background-color: rgb(108, 99, 240)"
+        ></div>
+      </div>
+    </div>
+  </div>
+
+  <h2 class="subheading2">Other Technologies</h2>
+  <div class="technologies-grid">
+    <div *ngFor="let icon of techIcons" class="icon-container">
+        <img  src="{{icon.path}}" class="technology-icon">
+        <p class="content" style="text-align: center;">{{ icon.name }}</p>
+    </div>    
+  </div>
+
+  <button class="nav-button" [routerLink]="['/']">Profile</button>
 </div>
