--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -2,8 +2,10 @@
     border-radius: 1rem;
     background-color: #2d2d2d;
     padding: 3rem 1.7rem;
+    padding-right: 1.2rem;
     min-height: 13rem;
     box-sizing: border-box;
+    border: 1px solid gray;
 }
 
 .rounded-box:hover{
@@ -12,22 +14,10 @@
 }
 
 .rounded-box-title{
-    color: white;
     padding-bottom: 1rem;
-    font-size: 2.5rem;
-    font-weight: 550;
-}
-
-.rounded-box-content{
-    color: white;
-    font-size: 1.5rem;
-    line-height: 1.5;
 }
 
 .rounded-box-heading{
-    font-weight: 450;
-    color: white;
-    font-size: 2rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
