--- a/src/app/skills-and-achievements/skills-and-achievements.component.css
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.css
@@ -1,19 +1,28 @@
 .content-container{
-    padding: 4em 2.5em 4em 2.5em;
+    padding: 0em 2.5em 8em 2.5em;
 }
 
 .skills{
     display: inline-block;
-    width: 90%;
+    width: 95%;
     height: 100%;
+    margin-bottom: 3rem;
 }
 
 .chart{
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    margin-top: 8rem;
+    margin-bottom: 10rem;
     width: 75%;
     height: 40rem;
     position: relative;
+}
+
+.bar-col-icon{
+    height: 5rem;
+    width: 5rem;
+    display: block;
+    margin: auto;
+    margin-bottom: 1rem;
 }
 
 .chart-colun-name{
@@ -26,12 +35,12 @@
 .skill-bar{
     position: absolute;
     bottom: 0;
-    width: 15%;
+    width: 17%;
 }
 
 .skill{
     height: 100%;
-    width: 15%;
+    width: 17%;
     display: inline-block;
     margin: 0% 3%;
 }
@@ -49,13 +58,42 @@
 .chart-label{
     position: absolute;
     right: 0;
-    color: red;
+    color: orange;
     font-size: 1.5rem;
+}
+
+.technologies-grid{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    gap: 4rem;
+    width: 75%;
+    margin-top: 6rem;
+    margin-bottom: 10rem;
+}
+
+.technology-icon{
+    height: 10rem;
+}
+
+.icon-container{
+    height: 10rem;
+    margin-bottom: 2rem;
 }
 
 @media screen and (max-width: 768px){
     .chart{
         width: 75%;
+    }
+
+    .chart-label{
+        font-size: 2rem;
+    }
+
+    .technologies-grid{
+        grid-template-columns: 4;
     }
 
 }
@@ -69,6 +107,9 @@
         margin: 0% 4%;
     }
 
+    .chart-label{
+        font-size: 1.8rem;
+    }
     
     .chart-colun-name{
         font-size: 1rem;
@@ -77,4 +118,15 @@
     .chart-label{
         font-size: 1rem;
     }
+
+    .technologies-grid{
+        grid-template-columns: 3;
+        width: 100%;
+    }
+
+    .bar-col-icon{
+        height: 4rem;
+        width: 4rem;
+       }
+
 }
