--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Suez+One&family=Yeon+Sung&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 * {
   margin: 0px;
@@ -27,11 +28,12 @@ body {
 
 .nav-button {
   outline: none;
-  border: none;
   padding: 1rem;
   font-size: 2rem;
-  border-radius: 2rem;
-  background-color: teal;
+  color: white;
+  background-color: #2d2d2d;
+  border: 2px solid rgb(226, 101, 55);
+  box-shadow: 4px 4px rgb(230, 230, 43);
   width: 15rem;
   display: block;
   margin: auto;
@@ -46,7 +48,7 @@ body {
 
 .content-heading {
   color: white;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   font-family: "Raleway", sans-serif;
   font-size: 7.3rem ;
   line-height: 1.5;
@@ -57,6 +59,7 @@ body {
   line-height: 1.5;
   color: white;
   font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .content-container {
@@ -72,6 +75,7 @@ body {
 .horizontal-container {
   display: flex;
   flex-wrap: wrap;
+  gap: 1rem;
 }
 
 @media (max-width: 1140px) {
@@ -86,30 +90,29 @@ body {
 }
 
 .heading-container{
-  padding: 4em 3em;
-  background-color: #302e2e;
+  padding: 3em 3em;
+  /* background-color: #302e2e; */
 }
 
 
 .subheading2{
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   line-height: 1.2;
   margin-bottom: 1rem;
+  font-family: "Raleway", sans-serif;
   color: white;
 }
 
 .subheading3{
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1.6;
   color: white;
+  font-family: "Raleway", sans-serif;
   margin-bottom: 0.5rem;
 }
 
 .list li{
   list-style: upper-roman;
-  font-size: 1.5rem;
-  line-height: 1.5;
-  color: white;
   padding-left: 1.3rem;
   margin-left: -2rem;
 }
@@ -143,6 +146,6 @@ body {
 
 @media screen and (max-width: 400px) {
   .content-heading {
-    font-size: 4rem
+    font-size: 3rem
   }
 }
