minor grammar fixes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -38,21 +38,17 @@
       <div class="col-1">
         <p class="content">
           I like developing new projects and exploring new technologies. I have
-          a passion for good UI experience. SO far, have have primarily focused
-          on Android development but recently I've been more active exploring
-          web technologies and frameworks.
+          a passion for good UI experience. I have explored and developed projects on Android Platform as well as web frameworks.
         </p>
         <br />
         <p class="content">
           I am fluent in various object oriented programming languages like
-          Java, Python, Kotlin and am exploring more into them. Apart from that
-          I've been exploring competitive programming and solving more and more
-          problems with C/C++.
+          Java, Python, Kotlin yet constantly exploring them more. Apart from that I've been exploring competitive programming with the help of Data Structures and Algorithms solving more and more problems with C/C++.
         </p>
         <br>
         <p class="content">
           I have released an Android Application on Google Play Store and have
-          developed serveral applications as learning challenges in Java, Python
+          developed several applications as learning challenges in Java, Python
           and Kotlin.
         </p>
         <br /><br />
