--- a/src/app/experiences/experience/experience.component.html
+++ b/src/app/experiences/experience/experience.component.html
@@ -1,6 +1,7 @@
 <div class="experience-container">
     <h2 class="subheading2">{{exp.title}}</h2>
     <h3 class="subheading3">{{exp.organization}}</h3>
+    <p class="content">{{exp.time}}</p>
     <ul class="list">
         <li class="content" *ngFor="let highlight of exp.highlights">{{highlight}}</li>
     </ul>
