--- a/src/styles.css
+++ b/src/styles.css
@@ -111,6 +111,10 @@ body {
   margin-bottom: 0.5rem;
 }
 
+.list{
+  margin-top: 2rem;
+}
+
 .list li{
   list-style: upper-roman;
   padding-left: 1.3rem;
