--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,10 +22,10 @@
         </div>
         
         <div class="horizontal-container center-responsive">
-          <mat-icon class="profile-icon"><a href="mailto:abhishekjagushte@gmail.com">email</a></mat-icon>
-          <mat-icon class="profile-icon"
-          ><a href="https://www.facebook.com/abhishek.jagushte.9">facebook</a></mat-icon
-          >
+          <a class="link-icon" href="mailto:abhishekjagushte@gmail.com"><img src="../../assets/mail.svg" alt="" class="profile-icon"></a>
+          <a class="link-icon" href="https://www.linkedin.com/in/abhishekjagushte/"><img src="../../assets/linkedin.svg" alt="" class="profile-icon"></a>
+          <a class="link-icon" href="https://github.com/abhishekjagushte"><img src="../../assets/github.svg" alt="" class="profile-icon"></a>
+          <a class="link-icon" href="https://www.instagram.com/abhishekjagushte/"><img src="../../assets/instagram.svg" alt="" class="profile-icon"></a>
         </div>
       </div>
     </div>
