--- a/src/app/experiences/experience/experience.component.css
+++ b/src/app/experiences/experience/experience.component.css
@@ -4,10 +4,34 @@
     padding-right: 0.5rem;
     padding-bottom: 2rem;
     border-left: 5px solid orangered;
-    border-top: 1px solid gray;
-    border-right: 1px solid gray;
-    border-bottom: 1px solid gray;
     margin-bottom: 5rem;
+    animation: border-anim 0.3s ease 0s 1 forwards;
+}
+
+@keyframes border-anim{
+    0%{
+        border-top: 0px solid gray;
+        border-right: 0px solid gray;
+        border-bottom: 0px solid gray;
+    }
+
+    33%{
+        border-top: 1px solid gray;
+        border-right: 0px solid gray;
+        border-bottom: 0px solid gray;
+    }
+
+    66%{
+        border-top: 1px solid gray;
+        border-right: 1px solid gray;
+        border-bottom: 0px solid gray;
+    }
+
+    100%{
+        border-top: 1px solid gray;
+        border-right: 1px solid gray;
+        border-bottom: 1px solid gray;
+    }
 }
 
 .btn{
