--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -1,6 +1,6 @@
 .rounded-box{
     border-radius: 1rem;
-    background-color: #2d2d2d;
+    background-color: #272727;
     padding: 3rem 1.7rem;
     padding-right: 1.2rem;
     min-height: 13rem;
