--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -4,7 +4,7 @@
 .profile-container {
   display: flex;
   flex-direction: column;
-  background-color: #302e2e;
+  background-color: var(--background-color-tertiary);
 }
 
 .content-padding {
@@ -27,12 +27,32 @@
   width: 25rem;
   padding: 1rem;
   border-radius: 12.5rem 12.5rem 12.5rem 12.5rem;
-  background-color: #534a4a;
+  background-color: var(--main-badge-color);
+  animation: badge 0.5s ease-out forwards;
 }
+
+@keyframes badge{
+  40%{
+    opacity: 0.4;
+    background-color: var(--secondary-color);
+  }
+  
+  60%{
+    opacity: 0.6;
+    background-color: var(--primary-color);
+  }
+
+  90%{
+    opacity: 1;
+    background-color: var(--main-badge-color);
+  }
+}
+
 
 .profile-image {
   height: 25rem;
   width: 25rem;
+  opacity: 1 !important;
 }
 
 .name {
@@ -41,18 +61,18 @@
   font-size: 10.3rem;
   line-height: 1.5;
   display: block;
-  text-shadow: 4px 4px #ed754f, 5px 5px yellow;
+  text-shadow: 4px 4px var(--primary-color), 5px 5px var(--secondary-color);
 }
 
 .tagline {
-  color: rgb(209, 199, 108);
+  color: var(--secondary-color);
   font-family: "Source Code Pro", monospace;
   font-size: 1.6rem;
 
 }
 
 .name:hover {
-  text-shadow: 5px 5px #ed754f, 6px 6px yellow;
+  text-shadow: 5px 5px var(--primary-color), 6px 6px var(--secondary-color);
 }
 
 .profile-icon {
