--- a/src/app/skills-and-achievements/skills-and-achievements.component.html
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.html
@@ -15,7 +15,7 @@
     
     <div class="skills">
       <div class="skill">
-        <img class="bar-col-icon" src="../../assets/android.webp" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/android.webp" alt="">
         <label class="chart-colun-name">Android</label>
         <div
         class="skill-bar"
@@ -24,7 +24,7 @@
       </div>
       
       <div class="skill">
-        <img class="bar-col-icon" src="../../assets/nodejs.webp" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/nodejs.webp" alt="">
         <label class="chart-colun-name">NodeJS</label>
         <div
           class="skill-bar"
@@ -33,7 +33,7 @@
         </div>
         
         <div class="skill">
-        <img class="bar-col-icon" src="../../assets/angular.png" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/angular.png" alt="">
         <label class="chart-colun-name">Angular</label>
         <div
         class="skill-bar"
@@ -42,7 +42,7 @@
       </div>
       
       <div class="skill">
-        <img class="bar-col-icon" src="../../assets/firebase.png" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/firebase.png" alt="">
         <label class="chart-colun-name">Firebase</label>
         <div
           class="skill-bar"
@@ -65,7 +65,7 @@
 
     <div class="skills">
       <div class="skill">
-        <img class="bar-col-icon" src="../../assets/kotlin.webp" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/kotlin.webp" alt="">
         <label class="chart-colun-name">Kotlin/Java</label>
         <div
         class="skill-bar"
@@ -74,7 +74,7 @@
       </div>
       
       <div class="skill">
-        <img class="bar-col-icon" src="../../assets/python.png" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/python.png" alt="">
         <label class="chart-colun-name">Python</label>
         <div
         class="skill-bar"
@@ -83,7 +83,7 @@
       </div>
       
       <div class="skill">
-        <img class="bar-col-icon" src="../../assets/typescript.webp" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/typescript.webp" alt="">
         <label class="chart-colun-name">Typescript</label>
         <div
         class="skill-bar"
@@ -92,7 +92,7 @@
       </div>
       
       <div class="skill">
-        <img class="bar-col-icon" src="../../assets/c.webp" alt="">
+        <img class="bar-col-icon icon-reveal" src="../../assets/c.webp" alt="">
         <label class="chart-colun-name">C/C++</label>
         <div
           class="skill-bar"
@@ -104,7 +104,7 @@
 
   <h2 class="subheading2">Other Technologies</h2>
   <div class="technologies-grid">
-    <div *ngFor="let icon of techIcons" class="icon-container">
+    <div *ngFor="let icon of techIcons" class="icon-container icon-reveal">
         <img  src="{{icon.path}}" class="technology-icon">
         <p class="content" style="text-align: center;">{{ icon.name }}</p>
     </div>    
