--- a/src/app/experiences/experience/experience.component.css
+++ b/src/app/experiences/experience/experience.component.css
@@ -3,34 +3,34 @@
     padding-top: 2rem;
     padding-right: 0.5rem;
     padding-bottom: 2rem;
-    border-left: 5px solid orangered;
+    border-left: 5px solid var(--primary-color);
     margin-bottom: 5rem;
     animation: border-anim 0.3s ease 0s 1 forwards;
 }
 
 @keyframes border-anim{
     0%{
-        border-top: 0px solid gray;
-        border-right: 0px solid gray;
-        border-bottom: 0px solid gray;
+        border-top: 0px solid var(--border-color);
+        border-right: 0px solid var(--border-color);
+        border-bottom: 0px solid var(--border-color);
     }
 
     33%{
-        border-top: 1px solid gray;
-        border-right: 0px solid gray;
-        border-bottom: 0px solid gray;
+        border-top: 1px solid var(--border-color);
+        border-right: 0px solid var(--border-color);
+        border-bottom: 0px solid var(--border-color);
     }
 
     66%{
-        border-top: 1px solid gray;
-        border-right: 1px solid gray;
-        border-bottom: 0px solid gray;
+        border-top: 1px solid var(--border-color);
+        border-right: 1px solid var(--border-color);
+        border-bottom: 0px solid var(--border-color);
     }
 
     100%{
-        border-top: 1px solid gray;
-        border-right: 1px solid gray;
-        border-bottom: 1px solid gray;
+        border-top: 1px solid var(--border-color);
+        border-right: 1px solid var(--border-color);
+        border-bottom: 1px solid var(--border-color);
     }
 }
 
@@ -38,14 +38,14 @@
     padding: 1rem 0.5rem;
     background-color: transparent;
     text-decoration: none;
-    border: 1px solid coral;
-    color: white;
+    border: 1px solid var(--primary-color);
+    color: var(--font-color);
     font-size: 1.5rem;
 }
 
 .btn:hover{
-    background-color: rgb(219, 157, 116);
-    color:white;
+    background-color: var(--hover-level-2);
+    color:var(--font-color);
 }
 
 .links-container{
