--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #292727;
+  background-color: var(--background-color-secondary);
 }
 
 .nav-menu {
@@ -21,17 +21,17 @@
   list-style: none;
   display: block;
   text-align: center;
-  color: #ed754f;
+  color: var(--primary-color);
   padding: 6px 0px 6px 0px;
   font-size: 1.6rem;
   opacity: 1;
 }
 
 .active {
-  background-color: #505050;
+  background-color: var(--hover-level-1);
 }
 .nav-menu-item:hover {
-  background-color: #707070;
+  background-color: var(--hover-level-2);
 }
 
 .hamburger-menu {
@@ -53,8 +53,9 @@
     justify-content: center;
     align-items: center;
     height: max-content;
+    z-index: 2;
     padding-top: 6em;
-    background-color: #292727;
+    background-color: var(--background-color-secondary);
     opacity: 0.9;
   }
 
