--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -1,15 +1,15 @@
 .rounded-box{
     border-radius: 1rem;
-    background-color: #272727;
+    background-color: var(--background-color-secondary);
     padding: 3rem 1.7rem;
     padding-right: 1.2rem;
     min-height: 13rem;
     box-sizing: border-box;
-    border: 1px solid gray;
+    border: 1px solid var(--border-color);
 }
 
 .rounded-box:hover{
-    background-color: #3d3d3d;
+    background-color: var(--hover-level-0);
     cursor: pointer;
 }
 
@@ -41,7 +41,7 @@
 }
 
 .tech-stack-icon{
-    color: white;
+    color: var(--font-color);
     height: 4rem;
     margin-right: 1rem;
 }
