--- a/src/app/experiences/experience/experience.component.css
+++ b/src/app/experiences/experience/experience.component.css
@@ -5,7 +5,10 @@
     padding-bottom: 2rem;
     border-left: 5px solid var(--primary-color);
     margin-bottom: 5rem;
-    animation: border-anim 0.3s ease 0s 1 forwards;
+    border-top: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color);
+    /* animation: border-anim 0.9s ease 0s 1 forwards; */
 }
 
 @keyframes border-anim{
@@ -14,7 +17,7 @@
         border-right: 0px solid var(--border-color);
         border-bottom: 0px solid var(--border-color);
     }
-
+    
     33%{
         border-top: 1px solid var(--border-color);
         border-right: 0px solid var(--border-color);
@@ -26,11 +29,11 @@
         border-right: 1px solid var(--border-color);
         border-bottom: 0px solid var(--border-color);
     }
-
+    
     100%{
         border-top: 1px solid var(--border-color);
         border-right: 1px solid var(--border-color);
-        border-bottom: 1px solid var(--border-color);
+        border-bottom: 1px solid var(--border-color);    
     }
 }
 
