--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -47,7 +47,7 @@
   .nav-container {
     display: block;
     position: fixed;
-    top: 0;
+    top: -100%;
     width: 100vw;
     flex-direction: column;
     justify-content: center;
@@ -57,6 +57,13 @@
     padding-top: 6em;
     background-color: var(--background-color-secondary);
     opacity: 0.9;
+    animation: nav-menu 0.4s ease-out 0s 1 forwards;
+  }
+
+  @keyframes nav-menu {
+    100%{
+      top:0;
+    }
   }
 
   .nav-menu-item{
