fixed few colors

--- a/src/app/skills-and-achievements/skills-and-achievements.component.html
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.html
@@ -19,7 +19,7 @@
         <label class="chart-colun-name">Android</label>
         <div
         class="skill-bar"
-        style="height: 65%; background-color: rgb(155, 192, 155)"
+        style="height: 65%; background-color: #32de84"
         ></div>
       </div>
       
@@ -69,7 +69,7 @@
         <label class="chart-colun-name">Kotlin/Java</label>
         <div
         class="skill-bar"
-        style="height: 68%; background-color: rgb(209, 148, 35)"
+        style="height: 68%; background-color: rgb(226, 121, 35)"
         ></div>
       </div>
       
@@ -78,7 +78,7 @@
         <label class="chart-colun-name">Python</label>
         <div
         class="skill-bar"
-        style="height: 62%; background-color: rgb(231, 229, 102)"
+        style="height: 62%; background-color: rgb(230, 211, 38)"
         ></div>
       </div>
       
@@ -96,7 +96,7 @@
         <label class="chart-colun-name">C/C++</label>
         <div
           class="skill-bar"
-          style="height: 52%; background-color: rgb(108, 99, 240)"
+          style="height: 52%; background-color: rgb(82, 72, 212)"
         ></div>
       </div>
     </div>
