--- a/src/app/experiences/experience/experience.component.css
+++ b/src/app/experiences/experience/experience.component.css
@@ -54,3 +54,9 @@
 .links-container{
     margin-top: 3rem;
 }
+
+@media screen and (max-width: 500px) {
+    .experience-container{
+        padding-left: 1.2rem;
+    }    
+}
