some minor fixes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -34,7 +34,7 @@
   <section class="content-padding">
     <h1 class="content-heading">What do I do?</h1>
     <div class="two-columns">
-      <div class="col-1"></div>
+      <!-- <div class="col-1"></div> -->
       <div class="col-1">
         <p class="content">
           I like developing new projects and exploring new technologies. I have
