--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -37,6 +37,12 @@
   animation: profile-image-anim 1s ease-out 0s 1 forwards;
 }
 
+.all-projects-img{
+  height: 200px;
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
 @keyframes profile-image-anim {
   100%{
     opacity: 1;
@@ -79,14 +85,11 @@
   display: none;
 }
 
-
 @media screen and (max-width: 1400px) {
   .name {
     font-size: 10.3rem;
     line-height: 1.5;
   }
-
-
 }
 
 @media screen and (max-width: 1100px) {
