--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -7,7 +7,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-style: var(--font-style);
   height: 100vh;
+  box-shadow: 0 0 3px 0px #000;
   background-color: var(--background-color-secondary);
 }
 
