resume icon added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -23,6 +23,7 @@
         <br>
         <div class="horizontal-container center-responsive">
           <a class="link-icon" href="mailto:abhishekjagushte@gmail.com"><img src="../../assets/mail.svg" alt="" class="profile-icon"></a>
+          <a class="link-icon" href="https://drive.google.com/file/d/1ifZ1__nMWhbJyg-ZS53I_wKpCsLsPMAQ/view?usp=sharing"><img src="../../assets/resume.svg" alt="" class="profile-icon"></a>
           <a class="link-icon" href="https://www.linkedin.com/in/abhishekjagushte/"><img src="../../assets/linkedin.svg" alt="" class="profile-icon"></a>
           <a class="link-icon" href="https://github.com/abhishekjagushte"><img src="../../assets/github.svg" alt="" class="profile-icon"></a>
           <a class="link-icon" href="https://www.instagram.com/abhishekjagushte/"><img src="../../assets/instagram.svg" alt="" class="profile-icon"></a>
