made some content shorter

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -55,6 +55,6 @@
         <br /><br />
       </div>
     </div>
-    <button class="nav-button" [routerLink]="['/projects']">Projects</button>
+    <button class="nav-button transition-background" [routerLink]="['/projects']">Projects</button>
   </section>
 </div>
