--- a/src/app/experiences/experience/experience.component.html
+++ b/src/app/experiences/experience/experience.component.html
@@ -6,6 +6,6 @@
         <li class="content" *ngFor="let highlight of exp.highlights">{{highlight}}</li>
     </ul>
     <div class="horizontal-container links-container">
-        <a *ngFor="let link of exp.links" href="{{link.link}}" class="btn">{{ link.title }}</a>
+        <a *ngFor="let link of exp.links" href="{{link.link}}" class="btn transition-background">{{ link.title }}</a>
     </div>
 </div>
