--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,14 +17,14 @@
 
 <div class="side-nav-container" >
     <ul class="nav-menu">
-        <li class="nav-menu-item"
+        <li class="nav-menu-item transition-background"
         [routerLink]="['/']"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{exact: true}"
         >Me</li>
-        <li class="nav-menu-item" [routerLink]="['/projects']"  routerLinkActive="active">Projects</li>
-        <li class="nav-menu-item" [routerLink]="['/experiences']" routerLinkActive="active">Experience</li>
-        <li class="nav-menu-item" [routerLink]="['/skills']" routerLinkActive="active">Skills</li>
+        <li class="nav-menu-item transition-background" [routerLink]="['/projects']"  routerLinkActive="active">Projects</li>
+        <li class="nav-menu-item transition-background" [routerLink]="['/experiences']" routerLinkActive="active">Experience</li>
+        <li class="nav-menu-item transition-background" [routerLink]="['/skills']" routerLinkActive="active">Skills</li>
     </ul>
 </div>
 
