--- a/src/app/projects/project/project.component.html
+++ b/src/app/projects/project/project.component.html
@@ -1,4 +1,4 @@
-<div class="rounded-box">
+<div class="rounded-box transition-background">
   <a href="{{project.projectLink}}" target="_blank">
   <div class="two-columns">
     <!-- <div class="project-card-col-2">
