--- a/src/styles.css
+++ b/src/styles.css
@@ -141,6 +141,10 @@ body::-webkit-scrollbar-thumb{
   margin-left: -2rem;
 }
 
+.transition-background{
+  transition: background-color 300ms ease;
+}
+
 @media screen and (max-width: 1400px) {
   
 }
